unpackaged/main/default/objects/Pharma_Template__mdt/Pharma_Template__mdt.object-meta.xml
<CustomObject>
    <label>Merck - Product Hierarchy</label>
    <pluralLabel>Merck - Product Hierarchies</pluralLabel>
</CustomObject>