unpackaged/main/default/objects/Pharma_Template__mdt/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>