unpackaged/main/default/objects/Pharma_Template__mdt/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>