unpackaged/main/default/objects/Pharma_Template__mdt/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <label>Therapeutic Area</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>