unpackaged/main/default/objects/Pharma_Template__mdt/listViews/Merck_Product_Hierarchies.listView-meta.xml
<ListView>
    <fullName>Merck_Product_Hierarchies</fullName>
    <columns>MasterLabel</columns>
    <columns>Business_Unit__c</columns>
    <columns>Therapeutic_Area__c</columns>
    <columns>Product_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Merck - Product Hierarchies</label>
    <language>en_US</language>
</ListView>